<resources>
    <string name="app_name">Your Choice</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="vegan">"Vegan"</string>
    <string name="veg">"Vegetarian"</string>
    <string name="savefilters">"Apply Filters"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="eating_page_heading">"Please match your preferences"</string>
    <string name="bio">"Bio"</string>
    <string name="search">"Your Search"</string>
    <string name="meat">"Non-Vegetarian"</string>
    <string name="local">"Regional"</string>
    <string name="season">"Seasonal"</string>
    <string name="animal">"Animal Welfare"</string>
    <string name="carbon">"Co2 footPrint"</string>
    <string name="continueToshop">"Continue to shopping"</string>
    <string name="tractor">"Fair &amp; Social"</string>
    <string name="env">"Environment"</string>
    <string name="additives">Additivies</string>
    <string name="recycle">"Recyclable"</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_scrolling_login">ScrollingLoginActivity</string>
    <string name="quetion2Regional">"Regional food ?"</string>
    <string name="quetion2seasonal">"Seasonal food ?"</string>
    <string name="quetion2Vegan">"Vegan ?"</string>
    <string name="quetion2Vegetarian">"Vegetarian ?"</string>
    <string name="valuesRatingHeading">"Provide your values on below categories!"</string>
    <string name="labelHeading">"Categories"</string>
    <string name="health">"  Health"</string>
    <string name="heart">"Preferences"</string>
    <string name="deal">"Points"</string>
    <string name="shop">"Shop"</string>
    <string name="privacy">"By clickling on Register, you agree to YouChoice app's \n terms of use and the privacy policy" </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="saveandcontinue">
        "Save &amp; Shop"
    </string>
    <string name="register">
        "Register at Your Choice"
    </string>
    <string name="eatingHabits">
        "What are your eating habits?"
    </string>
    <string name="wheretoShop">
        "Where do you usually go shopping?"
    </string>
    <string name="valueImportance">
        "How important are these categories for you?"
    </string>

    <string name="signup">"Sign-Up/Login"</string>
    <string name="introsearchheading">
        "Easy and fast shopping experience"
    </string>
    <string name="introsearchtext">

        "Discover a pre selected sustainable product portfolio and enjoy your new shopping experience."


    </string>
    <string name="introshopheading">
        "Fill your sustainable basket."</string>
    <string name="introshoptext">
        "We provide you the most sustainable, healthiest and best priced alternative while guaranteeing you complpete transparency."


    </string>
    <string name="introdealheading">
        "Earn Eco-Social Points"
    </string>
    <string name="introdeal">
        "Collect Eco-Social Points with every purchase and benefit from coupons and special offers in our Loyalty Program."

    </string>

    <string name="intropreference_head">
        "Personalized recommendations"</string>
    <string name="intro_prefernce">

     "Get individualized recommendations according to your eating habits and sustainability values."

    </string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login_scrolling">LoginScrollingActivity</string>

    <string-array name="food_values">
        <item>Milk</item>
        <item>Tomatoes</item>
        <item>bananen</item>
        <item>Wine</item>
        <item>Choclate cream</item>
    </string-array>

    <string-array name="array_productstypes">
        <item>Milk</item>
        <item>Milk Chocolate</item>
        <item>Banana</item>
        <item>Wine</item>
        <item>Chocolate</item>
        <item>Chocolate Cream</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yourchoice">Your Choice</string>
    <string name="preffered_products">Preferred Products</string>
    <string name="logintoyourchoice">Login Into Your Choice</string>


</resources>
