<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appintro.DealFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/introdeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/introdeal" />

    <TextView
        android:id="@+id/introdealheadingtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/introdeal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:textColor="#808080"
        android:textStyle="bold"
        android:text="@string/introdealheading"
        android:textSize="20sp"
        />
    <TextView
            android:id="@+id/introdealtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/introdeal"
            android:textSize="20sp"
        />

        <Button
            android:id="@+id/signUpLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/introbuttonshape"
            android:enabled="true"
            android:padding="10dp"
            android:text="@string/signup"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_margin="20dp"/>

    </LinearLayout>
</RelativeLayout>