<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SeekBar"
    android:paddingLeft="15sp"
    android:paddingRight="15sp">

    <TextView
        android:id="@+id/textViewHeadingw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/valuesRatingHeading"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="#808080"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/category1textAndImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="20dp"
        android:drawableTop="@drawable/bio"
        android:text="@string/bio"
        android:textAllCaps="false"
        android:textColor="#ACF41B"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <RatingBar
        android:id="@+id/bioratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHeadingw2"
        android:layout_marginLeft="169dp"
        android:layout_marginTop="46dp"
        android:layout_toRightOf="@+id/category1textAndImage"
        android:numStars="3"
        android:stepSize="1" />

    <TextView
        android:id="@+id/category2textAndImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category1textAndImage"
        android:layout_marginTop="36dp"
        android:drawableTop="@drawable/cow"
        android:singleLine="false"
        android:text="@string/animal"
        android:textAllCaps="false"
        android:textColor="#008080"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="parent" />

    <RatingBar
        android:id="@+id/animaltreatmentRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bioratingbar"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="44dp"
        android:layout_toRightOf="@+id/category2textAndImage"
        android:numStars="3"
        android:stepSize="1" />

    <TextView
        android:id="@+id/category3textAndImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category2textAndImage"
        android:layout_marginTop="49dp"
        android:drawableTop="@drawable/trash"
        android:text="@string/recycle"
        android:textAllCaps="false"
        android:textColor="#8B4513"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/recyclbleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/animaltreatmentRating"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="42dp"
        android:layout_toRightOf="@+id/category3textAndImage"
        android:numStars="3"
        android:stepSize="1" />

    <TextView
        android:id="@+id/category4textAndImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category2textAndImage"
        android:layout_marginTop="153dp"
        android:drawableTop="@drawable/tractor"
        android:text="@string/tractor"
        android:textAllCaps="false"
        android:textColor="#6f4e37"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="parent" />


    <RatingBar
        android:id="@+id/FairTrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/animaltreatmentRating"
        android:layout_marginLeft="107dp"
        android:layout_marginTop="156dp"
        android:layout_toRightOf="@+id/category4textAndImage"
        android:numStars="3"
        android:stepSize="1" />

    <SeekBar
        android:id="@+id/PriceSeekbar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/FairTrade"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:max="100"
        android:progressDrawable="@drawable/seek_bar"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/PriceSeekbar"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-70dp"
        android:text="Price:"
        android:textAllCaps="false"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/PriceSeekbar"
        android:layout_marginTop="14dp"
        android:src="@drawable/euro"
        android:layout_marginLeft="35dp"/>



</RelativeLayout>
