<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".eatinghabits">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:paddingRight="10dp"
       android:paddingLeft="10dp"
       >

    <TextView
        android:id="@+id/habitsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/eating_page_heading"
        android:textAllCaps="false"
        android:textColor="#808080"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/VeganTextView1"
        tools:layout_editor_absoluteX="72dp" />

    <TextView
        android:id="@+id/VeganTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:drawableRight="@drawable/vegan"
        android:text="@string/vegan"
        android:textAllCaps="false"
        android:textColor="#ACF41B"
        android:textSize="30sp"
        android:layout_marginLeft="140dp"
        app:layout_constraintTop_toBottomOf="@id/habitsText"
        tools:layout_editor_absoluteX="155dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:switchMinWidth="40dp"
            android:layout_marginLeft="0dp"
            android:text="Yes:"
            android:textOff="OFF"
            android:textOn="ON"
            />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginLeft="60dp"
            android:switchMinWidth="50dp"
            android:text="Try:"
            android:textOff="OFF"
            android:textOn="ON" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:checked="true"
            android:switchMinWidth="50dp"
            android:text="No:"
            android:textOff="OFF"
            android:textOn="ON" />

    </LinearLayout>

    <TextView
        android:id="@+id/VegTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:drawableRight="@drawable/diet"
        android:text="@string/veg"
        android:textAllCaps="false"
        android:textColor="#ACF41B"
        android:textSize="30sp"
        android:layout_marginLeft="125dp"
        tools:layout_editor_absoluteX="155dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <Switch
            android:id="@+id/switch4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:switchMinWidth="40dp"
            android:layout_marginLeft="0dp"
            android:text="Yes:"
            android:textOff="OFF"
            android:textOn="ON"
            />

        <Switch
            android:id="@+id/switch5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginLeft="70dp"
            android:switchMinWidth="50dp"
            android:text="Try:"
            android:textOff="OFF"
            android:textOn="ON" />

        <Switch
            android:id="@+id/switch6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:checked="true"
            android:switchMinWidth="50dp"
            android:text="No:"
            android:textOff="OFF"
            android:textOn="ON" />

    </LinearLayout>
    <TextView
        android:id="@+id/Non_VegTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:drawableRight="@drawable/meat"
        android:text="@string/meat"
        android:textAllCaps="false"
        android:textColor="#ACF41B"
        android:textSize="30sp"
        android:layout_marginLeft="80dp"
        tools:layout_editor_absoluteX="155dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <Switch
            android:id="@+id/switch7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:switchMinWidth="40dp"
            android:layout_marginLeft="0dp"
            android:text="Yes:"
            android:textOff="OFF"
            android:textOn="ON"
            />

        <Switch
            android:id="@+id/switch8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginLeft="70dp"
            android:switchMinWidth="50dp"
            android:text="Try:"
            android:textOff="OFF"
            android:textOn="ON" />

        <Switch
            android:id="@+id/switch9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:checked="true"
            android:switchMinWidth="50dp"
            android:text="No:"
            android:textOff="OFF"
            android:textOn="ON" />

    </LinearLayout>
    <Button
        android:id="@+id/applyFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:enabled="true"
        android:clickable="true"
        android:text="Apply Filters"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="60dp"
        style="@style/Animation.Design.BottomSheetDialog"
        android:textColor="#000000"
        android:background="@drawable/button_shape"
        />
   </LinearLayout>
</ScrollView>